# dependency_mapper

./: .gitignore  Cargo.toml  README.md  test.yaml
.github/workflows/: workflow.yml
agent/: Cargo.toml
agent-manager/: Cargo.toml  README.md  test.yaml
agent-manager/src/: config.rs  engine.rs  error.rs  lib.rs  main.rs  mod.rs  plugins.yaml
agent-manager/src/ipc/: communicator.rs  mod.rs  unix.rs  windows.rs
agent-manager/src/tests/: config_tests.rs  engine_tests.rs
agent-manager/src/tests/common/: mod.rs
agent-manager/tests/: config_tests.rs  engine_tests.rs  main.rs
agent-manager/tests/common/: mod.rs
agent/src/: agent.rs  lib.rs  main.rs  models.rs  scanners.rs  traits.rs  wopwop.rs
agent/src/scanners/: connections.rs  database.rs  ldap.rs
old/: Cargo.toml
old/src/: base.rs  example_module.rs  main.rs
old/src/connections/: connections.rs
old_server/src/: .gitignore  main.go  seed_data.txt
old_server/src/components/: card.templ  layout_templ.go  server.templ  server_templ.go
old_server/src/controllers/: nodesController.go
old_server/src/initializers/: connectToDb.go  globalLogging.go
old_server/src/models/: models.go
server/: .env  package-lock.json  package.json  src\logs\depmap_log.txt
server/backend/: .air.toml  .gitignore  depmap.db  go.mod  go.sum
server/frontend/: .gitignore  next.config.mjs  package-lock.json  package.json
server/src/: .air.toml  .gitignore  go.mod  go.sum  main.go  main_test.go  testpost.sh
std_modules/: Cargo.toml
std_modules/go/: go.mod  main.go
std_modules/src/: response.rs
(+115 files in other folders)
