[package]
name = "agent-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-queue = "0.3.11"
dashmap = "6.0.1"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["net", "rt", "macros", "time", "sync", "io-util"] }
tokio-macros = { version = "0.2.0-alpha.6" }
tokio-named-pipes = "0.1.0"

