[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration_tests"
path = "tests/main.rs"

[dependencies]
chrono = "0.4.38"
crossbeam-queue = "0.3.11"
dashmap = "6.0.1"
env_logger = "0.11.5"
futures = "0.3.30"
ipc-channel = "0.18.2"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
tempfile = "3.12.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["net", "rt-multi-thread", "macros", "time", "sync", "io-util", "process"] }
